Support audio and PDF media uploads
